Adding work info and a page loader

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <![endif]-->
   </head>
   <body>
-    <div class="banner">
-      <div class="title">Pranesh Ravi</div>
+    <div class="vetti-scene">
+      <div class="peru">Pranesh Ravi</div>
+      <h2 class="seira-vela">Web designer & Javascript Developer</h2>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
