--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="vetti-scene">
       <div class="peru">Pranesh Ravi</div>
-      <h2 class="seira-vela">Web designer & Javascript Developer</h2>
+      <h2 class="seira-vela">UI designer & Javascript Developer</h2>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
