adding about me and projects

--- a/index.html
+++ b/index.html
@@ -20,6 +20,103 @@
       <div class="peru">Pranesh Ravi</div>
       <h2 class="seira-vela">UI designer & Javascript Developer</h2>
     </div>
+    <div class="rendu">
+      <div class="container">
+        <div class="col-md-4 chinnatha-sceneu-irukarathu">
+          <header>
+            <div class="chinnatha-sceneu">
+              <h2>Pranesh Ravi</h2>
+              <span>UI designer & Javascript Developer</span>
+            </div>
+          </header>
+        </div>
+        <div class="col-md-8">
+          <div class="enna-pathi">
+          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI / Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”. When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative. Otherwise, you’ll find me playing badminton or listening to songs.
+        </div>
+        <div class="en-moonji">
+          <img src="img/beach.jpg" alt="">
+          <a href="https://goo.gl/maps/PLzUKxDVGYo" target="_blank">The Shore Temple, Mahabalipuram</a>
+        </div>
+        <div class="na-senjathu">
+          <h2>Projects</h2>
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Petch
+              </div>
+              <div class="matravai">
+                <span><a href="http://petch.xyz" class="fancy">View Project</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news live news sources. I built the UI and the API server was built by Narayanan Ember
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Frame
+              </div>
+              <div class="matravai">
+                <span><a class="fancy" href="//getframe.in">View Project</a></span>
+                <span><a class="fancy" href="//github.com/praneshr/frame">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning SCSS.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                React Easy Bind
+              </div>
+              <div class="matravai">
+                <span><a class="fancy" href="//www.npmjs.com/package/react-easy-bind">Npm</a></span>
+                <span><a class="fancy" href="//github.com/praneshr/react-easy-bind">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              React easy bind is a utility module which helps to makes the callback binding in React classes very easy.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Node Env Configs
+              </div>
+              <div class="matravai">
+                <span><a class="fancy" href="//www.npmjs.com/package/node-env-configs">Npm</a></span>
+                <span><a class="fancy" href="//github.com/praneshr/node-env-configs">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              Node Env Config loads config files based on the node environment. It serves the best with webpack configs and server configs.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Smart React Boilerplate
+              </div>
+              <div class="matravai">
+                <span><a class="fancy" href="//github.com/praneshr/smart-react-boilerplate">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+             Smart React Boilerplate is a React, Redux, Bootstrap, React CSS Modules boilerplate. This is a future ready codebase written in ES6/ES7 with performance in mind.
+            </div>
+          </div>
+
+        </div>
+        </div>
+      </div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
