Fixing image not loading

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI / Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”. When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative. Otherwise, you’ll find me playing badminton or listening to songs.
         </div>
         <div class="en-moonji">
-          <img src="img/beach.jpg" alt="">
+          <img src="img/beach.JPG" alt="">
           <a href="https://goo.gl/maps/PLzUKxDVGYo" target="_blank">The Shore Temple, Mahabalipuram</a>
         </div>
         <div class="na-senjathu">
