--- a/index.html
+++ b/index.html
@@ -22,15 +22,30 @@
     </div>
     <div class="rendu">
       <div class="container">
+      <div class="colorful-ah-iruku"></div>
         <div class="col-md-4 chinnatha-sceneu-irukarathu">
           <header>
             <div class="chinnatha-sceneu">
               <h2>Pranesh Ravi</h2>
               <span>UI designer & Javascript Developer</span>
             </div>
+            <div>
+              <div class="inayam">
+                <div>
+                  <a target="_blank" href="//github.com/praneshr" class="fancy">@github</a>
+                </div>
+                <div>
+                  <a target="_blank" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">@stakoverflow</a>
+                </div>
+                <div>
+                  <a target="_blank" href="//hashnode.com/@praneshr" class="fancy">@hashnode</a>
+                </div>
+              </div>
+            </div>
           </header>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 main-matter-ithu-tha">
+          <h2>About Me</h2>
           <div class="enna-pathi">
           As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI / Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”. When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative. Otherwise, you’ll find me playing badminton or listening to songs.
         </div>
@@ -50,7 +65,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news live news sources. I built the UI and the API server was built by Narayanan Ember
+              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news live news sources. I built the UI and the API server was built by <a href="//linkedin.com/in/embar" class="fancy" target="_blank">Narayanan Embar</a>
             </div>
           </div>
 
@@ -112,7 +127,9 @@
              Smart React Boilerplate is a React, Redux, Bootstrap, React CSS Modules boilerplate. This is a future ready codebase written in ES6/ES7 with performance in mind.
             </div>
           </div>
-
+          <div class="button-iruku-inga">
+            <button>View More Project at Github</button>
+          </div>
         </div>
         </div>
       </div>
