Improvements in layouts and colors

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+      <![endif]-->
   </head>
+
   <body>
     <div class="vetti-scene">
       <div class="peru">Pranesh Ravi</div>
@@ -22,39 +23,40 @@
     </div>
     <div class="rendu">
       <div class="container">
-      <div class="colorful-ah-iruku"></div>
-        <div class="col-md-4 chinnatha-sceneu-irukarathu">
-          <header>
-            <div class="chinnatha-sceneu">
-              <h2>Pranesh Ravi</h2>
-              <span>UI designer & Javascript Developer</span>
-            </div>
-            <div>
-              <div class="inayam">
-                <div>
-                  <a target="_blank" href="//github.com/praneshr" class="fancy">@github</a>
-                </div>
-                <div>
-                  <a target="_blank" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">@stakoverflow</a>
-                </div>
-                <div>
-                  <a target="_blank" href="//hashnode.com/@praneshr" class="fancy">@hashnode</a>
-                </div>
-              </div>
-            </div>
-          </header>
-        </div>
-        <div class="col-md-8 main-matter-ithu-tha">
-          <h2>About Me</h2>
-          <div class="enna-pathi">
-          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI / Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”. When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative. Otherwise, you’ll find me playing badminton or listening to songs.
+        <h2>About Me</h2>
+        <div class="enna-pathi">
+          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI /
+          Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love
+          to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”.
+          When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative.
+          Otherwise, you’ll find me playing badminton or listening to songs.
+          <div class="inayam">
+            Find me on <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a>,
+            <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stakoverflow</a> and  <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a>
+          </div>
         </div>
         <div class="en-moonji">
-          <img src="img/beach.JPG" alt="">
+          <div class="mangala-theriyum">
+            <img src="img/beach.JPG" id="blur" alt="">
+            <img src="img/beach.JPG" alt="">
+          </div>
           <a href="https://goo.gl/maps/PLzUKxDVGYo" target="_blank">The Shore Temple, Mahabalipuram</a>
         </div>
         <div class="na-senjathu">
           <h2>Projects</h2>
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                OSS at Indix
+              </div>
+              <div class="matravai">
+                <span><a href="//oss.indix.com" class="fancy">View Project</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              A simple static site to list all Indix's open sourced projects.
+            </div>
+          </div>
           <div class="row">
             <div class="thalaipu-matrum-matravai">
               <div class="thalaipu">
@@ -65,7 +67,9 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news live news sources. I built the UI and the API server was built by <a href="//linkedin.com/in/embar" class="fancy" target="_blank">Narayanan Embar</a>
+              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news
+              live news sources. I built the UI and the API server was built by <a href="//linkedin.com/in/embar"
+                class="fancy" target="_blank">Narayanan Embar</a>
             </div>
           </div>
 
@@ -80,7 +84,8 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning SCSS.
+              Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning
+              SCSS.
             </div>
           </div>
 
@@ -124,15 +129,37 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-             Smart React Boilerplate is a React, Redux, Bootstrap, React CSS Modules boilerplate. This is a future ready codebase written in ES6/ES7 with performance in mind.
+              Smart React Boilerplate is a React, Redux, Bootstrap, React CSS Modules boilerplate. This is a future ready codebase written
+              in ES6/ES7 with performance in mind.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="thalaipu-matrum-matravai">
+              <div class="thalaipu">
+                Smart TSX Boilerplate
+              </div>
+              <div class="matravai">
+                <span><a class="fancy" href="//github.com/praneshr/smart-tsx-boilerplate">Github</a></span>
+              </div>
+            </div>
+            <div class="ithu-enna-seiyum">
+              Smart TSX Boilerplate is the Typescript version of Smart React Boilerplate.
             </div>
           </div>
           <div class="button-iruku-inga">
-            <button>View More Project at Github</button>
+            <a href="//github.com/praneshr?utf8=%E2%9C%93&tab=repositories&q=&type=public&language=">
+            <button>Find more projects on Github</button>
+            </a>
           </div>
         </div>
-        </div>
       </div>
+      <footer>
+        <div>
+          <img src="/img/heart.svg" alt="">
+          <h4>Designed and developed by Pranesh Ravi</h4>
+        </div>
+      </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
