--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 OSS at Indix
               </div>
               <div class="matravai">
-                <span><a href="//oss.indix.com" class="fancy">View Project</a></span>
+                <span><a href="oss.indix.com" class="fancy">View Project</a></span>
               </div>
             </div>
             <div class="ithu-enna-seiyum">
