--- a/index.html
+++ b/index.html
@@ -19,20 +19,18 @@
   <body>
     <div class="vetti-scene">
       <div class="peru">Pranesh Ravi</div>
-      <h2 class="seira-vela">UI designer & Javascript Developer</h2>
+      <h2 class="seira-vela">UI designer & JavaScript Developer</h2>
     </div>
     <div class="rendu">
       <div class="container">
         <h2>About Me</h2>
         <div class="enna-pathi">
-          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI /
-          Web / Graphic designing and Frontend development. I care a great deal about how people respond to design. I love
-          to learn about anything and everything. To hone my skills as a Web designer / developer, I assisted my friend's startup,“Chathrang”.
-          When I’m not hanging out with friends or engaged in work, you’ll find me engrossed in my laptop doing something creative.
-          Otherwise, you’ll find me playing badminton or listening to songs.
+          I’m a 23 year old self-taught UI designer and a JavaScript developer based in Chennai, India. I’ve nearly 4 years of experience in UI design and development, which includes 2 years of professional experience. I've an undergraduate degree in Computer Science Engineering. Currently, I’m designing and developing world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+          <br/>
+          <br/>
+          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI designing and development. I care a great deal about how people respond to design. I’ve a strong obsession with Diffused drop shadows, Whitespace, Geometric shapes and ReactJS. I’m very fluent in HTML, CSS, SCSS and improving on my JavaScript.
           <div class="inayam">
-            Find me on <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a>,
-            <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stakoverflow</a> and  <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a>
+            <a target="_blank" href="//github.com/praneshr" class="fancy">Email</a> - <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a> - <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stakoverflow</a> -  <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a> - <a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>.
           </div>
         </div>
         <div class="en-moonji">
@@ -54,7 +52,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              A simple static site to list all Indix's open sourced projects.
+              A place to showcase all the open source projects done by the people at Indix and to recognize all the contributors.
             </div>
           </div>
           <div class="row">
@@ -68,8 +66,8 @@
             </div>
             <div class="ithu-enna-seiyum">
               Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news
-              live news sources. I built the UI and the API server was built by <a href="//linkedin.com/in/embar"
-                class="fancy" target="_blank">Narayanan Embar</a>
+              live news sources. It was a team effort of myself and the brilliant <a href="//linkedin.com/in/embar"
+                class="fancy" target="_blank">Narayanan Embar</a>.
             </div>
           </div>
 
@@ -100,7 +98,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              React easy bind is a utility module which helps to makes the callback binding in React classes very easy.
+              React easy bind is a utility module which helps to bind React component methods to the component's instances and providing an API methods to pass extra parameters to the component method with ease.
             </div>
           </div>
 
@@ -115,7 +113,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Node Env Config loads config files based on the node environment. It serves the best with webpack configs and server configs.
+              Node Env Config loads config files based on the node environment. It works best with webpack configurations and server configurations.
             </div>
           </div>
 
@@ -129,8 +127,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Smart React Boilerplate is a React, Redux, Bootstrap, React CSS Modules boilerplate. This is a future ready codebase written
-              in ES6/ES7 with performance in mind.
+              A future ready React, Redux, Bootstrap, React CSS Modules boilerplate written in ES6/ES7.
             </div>
           </div>
 
@@ -144,7 +141,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Smart TSX Boilerplate is the Typescript version of Smart React Boilerplate.
+              A future ready React, Redux, Bootstrap, React CSS Modules boilerplate written in TypeScript.
             </div>
           </div>
           <div class="button-iruku-inga">
