Adding footer info and meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Pranesh Ravi">
+    <meta name="description" content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix">
+
+    <meta name="twitter:card" value="summary_large_image">
+    <meta name="twitter:site" value="@pranesh_ravi">
+    <meta name="twitter:creator" value="@pranesh_ravi">
+    <meta name="twitter:title" content="Pranesh Ravi">
+    <meta name="twitter:description" content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix">
+    <meta name="twitter:image" content="/img/praneshr.png">
+
+    <meta content="Pranesh Ravi" property="og:site_name">
+    <meta content="Pranesh Ravi" property="og:title">
+    <meta content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix" property="og:description">
+    <meta content="website" property="og:type">
+    <meta content="//praneshr.github.io" property="og:url">
+    <meta content="/img/praneshr.png" property="og:image" />
+
+    <meta name="theme-color" content="#6356E5">
+    <meta name="msapplication-navbutton-color" content="#6356E5">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#6356E5">
     <title>Pranesh Ravi</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -25,12 +45,14 @@
       <div class="container">
         <h2>About Me</h2>
         <div class="enna-pathi">
-          I’m a 23 year old self-taught UI designer and a JavaScript developer based in Chennai, India. I’ve nearly 4 years of experience in UI design and development, which includes 2 years of professional experience. I've an undergraduate degree in Computer Science Engineering. Currently, I’m designing and developing world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
-          <br/>
-          <br/>
-          As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI designing and development. I care a great deal about how people respond to design. I’ve a strong obsession with Diffused drop shadows, Whitespace, Geometric shapes and ReactJS. I’m very fluent in HTML, CSS, SCSS and improving on my JavaScript.
+          <p>
+            I’m a 23 year old self-taught UI designer and a JavaScript developer based in Chennai, India. I’ve nearly 4 years of experience in UI design and development, which includes 2 years of professional experience. I've an undergraduate degree in Computer Science Engineering. Currently, I’m designing and developing world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+          </p>
+          <p id="second">
+            As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI designing and development. I care a great deal about how people respond to design. I’ve a strong obsession with Diffused drop shadows, Whitespace, Geometric shapes and ReactJS. I’m very fluent in HTML, CSS, SCSS and improving on my JavaScript.
+          </p>
           <div class="inayam">
-            <a target="_blank" href="//github.com/praneshr" class="fancy">Email</a> - <a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a> - <a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stakoverflow</a> -  <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a> - <a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>.
+            <a target="_blank" href="//github.com/praneshr" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>
           </div>
         </div>
         <div class="en-moonji">
@@ -152,10 +174,16 @@
         </div>
       </div>
       <footer>
-        <div>
+        <div class="love">
           <img src="/img/heart.svg" alt="">
           <h4>Designed and developed by Pranesh Ravi</h4>
         </div>
+        <div class="hosted">
+          This site is hosted using Github Pages and the code is available on <a href="//github.com/praneshr/praneshr.github.io" class="fancy">Github</a>
+        </div>
+         <div class="inayam">
+            <a target="_blank" href="//github.com/praneshr" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>
+          </div>
       </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
