--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta name="twitter:creator" value="@pranesh_ravi">
     <meta name="twitter:title" content="Pranesh Ravi">
     <meta name="twitter:description" content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix">
-    <meta name="twitter:image" content="/img/praneshr.png">
+    <meta name="twitter:image" content="//praneshr.github.io/img/praneshr.png">
 
     <meta content="Pranesh Ravi" property="og:site_name">
     <meta content="Pranesh Ravi" property="og:title">
     <meta content="Pranesh Ravi's personal website | UI Designer & Javascript Developer at Indix" property="og:description">
     <meta content="website" property="og:type">
     <meta content="//praneshr.github.io" property="og:url">
-    <meta content="/img/praneshr.png" property="og:image" />
+    <meta content="//praneshr.github.io/img/praneshr.png" property="og:image" />
 
     <meta name="theme-color" content="#6356E5">
     <meta name="msapplication-navbutton-color" content="#6356E5">
