Adding favicon and style fixes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <meta name="msapplication-navbutton-color" content="#6356E5">
     <meta name="apple-mobile-web-app-status-bar-style" content="#6356E5">
     <title>Pranesh Ravi</title>
+    <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 
