Updating project info

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              A place to showcase all the open source projects done by the people at Indix and to recognize all the contributors.
+              A place to showcase all the open source projects developed by the folks at Indix and to recognize all the contributors.
             </div>
           </div>
           <div class="row">
@@ -88,9 +88,8 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Petch is real-time social news crawler. It fetch live news from various social medias like twitter, facebook and other news
-              live news sources. It was a team effort of myself and the brilliant <a href="//linkedin.com/in/embar"
-                class="fancy" target="_blank">Narayanan Embar</a>.
+             Petch is a real-time news crawler. It fetches live news from various social media platforms like Twitter, Facebook and other sources. It was a combined effort by  <a href="//linkedin.com/in/embar"
+                class="fancy" target="_blank">Narayanan Embar</a> and me.
             </div>
           </div>
 
@@ -105,8 +104,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning
-              SCSS.
+              Frame is a minimal frontend framework with fluid grid system and basic UI components. I built this on the course of learning SCSS.
             </div>
           </div>
 
@@ -121,7 +119,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              React easy bind is a utility module which helps to bind React component methods to the component's instances and providing an API methods to pass extra parameters to the component method with ease.
+              React easy bind is a utility module which helps to bind React component methods to the component's instances. It also provides API to pass extra parameters to the component method with ease.
             </div>
           </div>
 
@@ -150,7 +148,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              A future ready React, Redux, Bootstrap, React CSS Modules boilerplate written in ES6/ES7.
+             A future ready React, Redux, Bootstrap, React CSS Modules boilerplate developed in ES6/ES7.
             </div>
           </div>
 
@@ -164,7 +162,7 @@
               </div>
             </div>
             <div class="ithu-enna-seiyum">
-              A future ready React, Redux, Bootstrap, React CSS Modules boilerplate written in TypeScript.
+             A future ready React, Redux, Bootstrap, React CSS Modules boilerplate developed in TypeScript.
             </div>
           </div>
           <div class="button-iruku-inga">
