Remove async assest loading

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       setBannerViewPort()
       var id = window.setInterval(loading, 200)
     </script>
-    <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script async src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
