Adding final text contents and css enhancements

--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
   <body>
     <div class="vetti-scene">
       <div class="peru"></div>
-      <h2 class="seira-vela"></h2>
+      <div class="seira-vela"></div>
     </div>
     <div class="rendu">
       <div class="container">
         <h2>About Me</h2>
         <div class="enna-pathi">
           <p>
-            I’m a 23 year old self-taught UI designer and a JavaScript developer based in Chennai, India. I’ve nearly 4 years of experience in UI design and development, which includes 2 years of professional experience. I've an undergraduate degree in Computer Science Engineering. Currently, I’m designing and developing world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
+            I’m a 23 year old self-taught UI designer and a Full-Stack developer based in Chennai, India. I’ve nearly 4 years of experience, which includes 2 years of professional experience. Currently, I design and develop world class Web Applications along with a group of brilliant people at Indix(<a href="//indix.com/join-us/" class="fancy">We’re hiring</a>).
           </p>
           <p id="second">
-            As a small kid, I always had a penchant for designing. What started as a hobby in video-editing became a passion in UI designing and development. I care a great deal about how people respond to design. I’ve a strong obsession with Diffused drop shadows, Whitespace, Geometric shapes and React Js. I’m fluent in HTML, CSS, SCSS, Node Js, React Js and Object-oriented Js. And I'm comfortable with tools and transpliers like Webpack, Gulp, Babel and Typescript.
+            In  my free time, I'll play badminton(Few videos are on <a href="https://www.youtube.com/playlist?list=PLSrYKiTg0Q9XYq9zlXvMlhnzHhSm6xYwy" class="fancy">Youtube</a>) or listen to all kind of <a class="fancy" href="https://play.spotify.com/user/12178360590">music</a>.
           </p>
           <div class="inayam">
-            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>
+            <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//blog.praneshravi.in" id="me" class="fancy">Medium</a>
           </div>
         </div>
         <div class="en-moonji">
           <div class="mangala-theriyum">
             <img src="img/beach.JPG" id="blur" alt="">
-            <img src="img/beach.JPG" alt="">
+            <img src="img/beach.JPG" alt="" id="pro-pic">
           </div>
           <a href="https://goo.gl/maps/PLzUKxDVGYo" target="_blank">The Shore Temple, Mahabalipuram</a>
         </div>
@@ -76,7 +76,7 @@
           <h2>Skills</h2>
           <div class="enaku-therunjathu-list">
             <div class="enaku-therunjathu-block">
-              <h4>Experience Design</h4>
+              <h4>User Experience Design</h4>
               <div class="percentage-container">
                 <div class="percentage" id="ux"></div>
               </div>
@@ -106,7 +106,7 @@
               </div>
             </div>
             <div class="enna-pathi">
-              <p>In addition, I've a good knowlege about version control systems like Github and Bitbucket and CI systems like GoCD, Travis CI, CircleCI, Snap CI. Also, I've a good knowlege about Docker and few basics about Kubernetes.</p>
+              <p>In addition, I have a good knowledge on version control systems such as Github, Bitbucket and CI systems such as GoCD, Travis CI, CircleCI, Snap CI. Also, I have a good knowledge about Docker and basics about Kubernetes. I'm comfortable with tools and transpilers like Webpack, Gulp, Babel and Typescript.</p>
             </div>
           </div>
         </div>
@@ -225,7 +225,7 @@
           <h4>Designed and developed by Pranesh Ravi</h4>
         </div>
         <div class="hosted">
-          This site is hosted using Github Pages and the code is available on <a href="//github.com/praneshr/praneshr.github.io" class="fancy">Github</a>
+          This webpage is hosted in Github Pages and the code is available on <a href="//github.com/praneshr/praneshr.github.io" class="fancy">Github</a>
         </div>
          <div class="bottom-links inayam">
             <a target="_top" href="mailto:talkto@praneshravi.in" class="fancy">Email</a><a target="_blank" id="git" href="//github.com/praneshr" class="fancy">Github</a><a target="_blank" id="so" href="//stackoverflow.com/users/4945468/pranesh-ravi" class="fancy">Stackoverflow</a> <a target="_blank" id="hn" href="//hashnode.com/@praneshr" class="fancy">Hashnode</a><a href="//medium.com/@praneshravi" id="me" class="fancy">Medium</a>
